--- a/pages/level1.html
+++ b/pages/level1.html
@@ -13,18 +13,19 @@
   <link rel="stylesheet" href="../css/level.css">
 </head>
 
-<style>
+<!-- <style>
     .header { 
         background-image: url('../assets/img/header_lvl1.png');
         background-repeat: no-repeat;
-        background-size: 100%;
+        background-size: auto;
         background-color:#cbe5ff;
     }
-</style>
+</style> -->
 
 <body>   
     <div class="grid-container">
         <div class="header">
+            <img src="../assets/img/header_lvl1.png"></img>  
         </div>
 
         <div class="sidebar">
@@ -66,6 +67,7 @@
 
                 <textarea class="input-area" placeholder="start typing here..." id="input-area"></textarea>
                 <button class="nextlvlbtn" id="nextlvlbtn">Next Level</button>
+                <button class="restartbtn" id="restartbtn">Restart</button>
             </div>
         </div>
     </div>
