--- a/pages/storm.html
+++ b/pages/storm.html
@@ -10,7 +10,7 @@
   <meta name="description" content="b&b adventure.">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     </div>
 
     <div class="mainbody">
-        <div><img src="assets\img\loading_bee.gif"></img></div>    
+        <div><img src="./assets/img/loading_bee.gif"></img></div>    
         <button class="startbtn" id="startbtn">Start</button>
     </div>
 
@@ -28,7 +28,7 @@
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous">
     </script>
     
-    <script src="scripts/loading_storm.js"></script>
+    <script src="../scripts/loading_type.js"></script>
 </body>
 
 </html>
