--- a/pages/beehive.html
+++ b/pages/beehive.html
@@ -10,7 +10,7 @@
   <meta name="description" content="b&b adventure.">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous">
     </script>
     
-    <script src="scripts/loading_storm.js"></script>
+    <script src="scripts/loading.js"></script>
 </body>
 
 </html>
