--- a/pages/level1.html
+++ b/pages/level1.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="sidebar">
-            <img src="../assets/img/blank_bee.png"></img>  
+            <img src="../assets/img/sidebee_lvl1.png"></img>  
         </div>
 
         <div class="mainbody">
