--- a/pages/level3.html
+++ b/pages/level3.html
@@ -16,11 +16,11 @@
 <body>   
     <div class="grid-container">
         <div class="header">
-            <img src="../assets/img/header_lvl1.png"></img>  
+            <img src="../assets/img/header_lvl3.png"></img>  
         </div>
 
         <div class="sidebar">
-            <img src="../assets/img/blank_bee.png"></img>  
+            <img src="../assets/img/sidebee_lvl3.png"></img>  
         </div>
 
         <div class="mainbody">
