--- a/pages/storm.html
+++ b/pages/storm.html
@@ -15,13 +15,11 @@
 
 <body>
   <div class="grid-container">
-    <div class="header">
-      <h1>Bees & Beehives</h1>
-    </div>
-
     <div class="mainbody">
-        <div><img src="./assets/img/loading_bee.gif"></img></div>    
-        <button class="startbtn" id="startbtn">Start</button>
+        <div><img src="../assets/img/storm.gif"></img></div>
+        <h2>The bee friends were out on a trip, but a sudden storm blew them away!</h2> 
+        <h2>Type your way through some bee facts to help the bees reunite and find their way home to the hive together!</h2>   
+        <button class="startbtn" id="startbtn">Rescue Bees!</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
